Bug fix for the sticky header nav that jumps the page up when activated.

--- a/wp-content/themes/makeblog/version-2/less/header.less
+++ b/wp-content/themes/makeblog/version-2/less/header.less
@@ -217,6 +217,7 @@ h6 {
 
 .header-wrapper {
   background-color: #F0F0F0;
+  min-height: 115px;
 }
 
 .navbar-default {
@@ -1919,6 +1920,10 @@ ul.sub-menu.moove-right {
     font-size: 11px;
     font-weight: 400;
     line-height: 18px;
+  }
+
+  .header-wrapper {
+    min-height: 0;
   }
 
 }
